Dec 23 2002  2.7.1  Kismet is now 1 year old!
                    Updated libpcap version to the current libpcap-devel.
                     Anyone fetching updates from CVS should use the -P flag to
                     prune empty directories.
                    Updated README w/ new documentation, merged most of the docs/
                     directory into one file.
                    More 2.8 docs updates
Dec 22 2002  2.7.1  Fixed multiserver alert displays in panels frontend
                    Fixed adhoc network handling - it once again uses the 
                     actual advertised BSSID, but this may result in a creeping
                     list of networks as the firmware changes its bssid
                     continually.
                    Fixed very stupid pointer math which caused several issues
Dec 20 2002  2.7.1  Fixed turbocell ssid's not being munged
Dec 19 2002  2.7.1  Fixed gps point logging of PHY packets
Dec 17 2002  2.7.1  Fixed kismet_hopper on systems with old wireless extention
                     versions.
                    Revamped packet capture stream.  Live-decoded wep packets
                     are now logged as encrypted data again.
                    Added CRC32 checking of WEP data
Dec 16 2002  2.7.1  Added error handling for client access control 'network'
                     addresses which aren't valid network addresses (ie,
                     10.0.0.1/24 is not valid.)
Dec 15 2002  2.7.1  Added netmask-based client access control
                    Fixed saved ip loading
Dec 14 2002  2.7.1  Added client-controlled WEP decryption keys
                    Fixed ERROR protocol handling in tcpclient
Dec 13 2002  2.7.1  Added ERROR protocol handling to tcpclient
Dec 11 2002  2.7.1  Merged more hopper patches from Anders Gustafsson
                    Fixed tcpserver client line order
Dec 10 2002  2.7.1  Fixed some packet dissection and wep/interesting detection
                     bugs with fuzzy encryption mode