@@ -1,3 +1,5 @@
+Dec 24 2002  2.7.1  Added writing of client info to the XML file, updated the
+                     Kismet DTD.
 Dec 23 2002  2.7.1  Kismet is now 1 year old!
                     Updated libpcap version to the current libpcap-devel.
                      Anyone fetching updates from CVS should use the -P flag to
